# mysite

./: build.sh  pyproject.toml
mysite/: settings.py  urls.py
render/templates/render/: index.html
