[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["nitin12384 <nknitinkumar12384@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.2"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
